--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,18 @@ div{
     padding: 12px;
 }
 
+.middle-container{
+    background-color: red;
+    width: 200px;
+    height: 200px;
+}
+
+.bottom-container{
+    background-color: blue;
+    height: 200px;
+    width: 200px;
+}
+
 body {
     margin: 0;
 }
