edit styles.css file v00012

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 }
 
 .bottom-container{
-    background-color: rgb(100, 500, 150);
+    background-color: blue;
     height: 200px;
     width: 200px;
 }
