--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@
 body {
     margin: 0;
     text-align: center;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 h1{
@@ -27,6 +28,7 @@ h1{
 
 p{
     color: white;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .soft{
