--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@
 body {
     margin: 0;
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Courier New", Courier, monospace;
 }
 
 h1{
