--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ body {
 
 h1{
     color: white;
-    font-family: "Poiret", monospace;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 p{
