--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,23 @@
 .top-container{
     background-color: black;
     position: relative;
-    padding-top: 100px;    
+    padding-top: 10%;
+    padding-bottom: 23%;
+    text-align: center;
 }
 
 .middle-container{
     background-color: black;
     position: relative;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 .bottom-container{
     background-color: black;
     position: relative;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 body {
@@ -20,32 +26,42 @@ body {
     font-family: "Courier New", Courier, monospace;
 }
 
-h1{
+.i\'m-philopatear{
     color: yellow;
     font-family: 'Poiret One', cursive;
-    font-size: 400%;
+    font-size: 900%;
+    position: relative;
 }
 
 h2{
     color: yellow;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Poiret One', cursive;
 }
 
 h3{
     color: yellow;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Poiret One', cursive;
 }
 
 p{
     color: white;
     font-family: 'Courier New', Courier, monospace;
-    /*font-size: 120%;*/
+}
+
+hr{
+    height: 1px;
+    width: 20%;
+    border: 0;
+    border-top: 1px solid yellow;
 }
 
 .software-engineer{
     color: yellow;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 120%;
+    /*font-size: 120%;*/
+    position: absolute;
+    bottom: 44%;
+    left: 44%;
 }
 
 .software{
