--- a/css/styles.css
+++ b/css/styles.css
@@ -59,9 +59,10 @@ hr{
     color: yellow;
     font-family: 'Courier New', Courier, monospace;
     font-size: 1.2rem;
-    position: absolute;
-    bottom: 44%;
-    left: 44%;
+    /*position: absolute;*/
+    /*bottom: 44%;*/
+    /*left: 44%;*/
+    margin: auto;
 }
 
 span{
