--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,7 @@ hr{
 
 span{
     color: yellow;
+    font-weight: bolder;
 }
 
 .social-link{
@@ -81,4 +82,10 @@ span{
 
 .philo{
     color: white;
+}
+
+.skills-paragraph{
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
 }
